# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-03 21:54:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-19

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-19


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 21:43:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-18

    Summary:
      checkpoint
    Revision:
      missingh--head--0.7--patch-18


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 21:40:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-17

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-17


    new files:
     libsrc/MissingH/FileArchive/.arch-ids/=id
     libsrc/MissingH/FileArchive/GZip.hs

    modified files:
     ChangeLog libsrc/MissingH/Checksum/CRC32.hs
     libsrc/MissingH/Compression/Inflate.hs

    new directories:
     libsrc/MissingH/FileArchive
     libsrc/MissingH/FileArchive/.arch-ids


2004-12-03 21:18:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-16

    Summary:
      Little bit of hacking on Inflate to make it work nicer
    Revision:
      missingh--head--0.7--patch-16


    modified files:
     ChangeLog libsrc/MissingH/Compression/Inflate.hs


2004-12-03 20:48:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-15

    Summary:
      Import Inflate
    Revision:
      missingh--head--0.7--patch-15


    new files:
     libsrc/MissingH/Compression/Inflate.hs

    modified files:
     ChangeLog Setup.description


2004-12-03 20:41:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-14

    Summary:
      Preparing to import Inflate
    Revision:
      missingh--head--0.7--patch-14


    new files:
     3rd-party-licenses/BSD
     libsrc/MissingH/Compression/.arch-ids/=id

    modified files:
     COPYRIGHT ChangeLog

    new directories:
     libsrc/MissingH/Compression